--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Bad Byte Games Site</title>
   </head>
   <body>
-  Nothing here yet
+    <a href=https://badbytegames.github.io/adventuregenerator.html>DragonHunt Adventure Generator</a>
   </body>
 </html>
