Updated some links

--- a/glasswall.html
+++ b/glasswall.html
@@ -32,13 +32,14 @@
         <li>Physics Focused</li>
         <li>C++ API</li>
       </ul>
-      <img class="softwarelogo" src="SDL_Logo.png" alt="sdl logo"/>
-      <img class="softwarelogo" src="GLM_logo.png" alt="glm logo"/>
-      <img class="softwarelogo" src="opengl.svg" alt="opengl logo"/>
+      <a href="https://www.libsdl.org/index.php"><img class="softwarelogo" src="SDL_Logo.png" alt="sdl logo"/></a>
+      <a href="https://glm.g-truc.net/0.9.9/index.html"><img class="softwarelogo" src="GLM_logo.png" alt="glm logo"/></a>
+        
+      <a href="https://www.opengl.org/"><img class="softwarelogo" src="opengl.svg" alt="opengl logo"/></a>
     </div>
     <!--Copyright notice-->
     <div id="footer">
-      <p>Copyright &copy; Robert White 2018 OpenGL&reg; and the oval logo are trademarks or registered trademarks of Hewlett Packard Enterprise in the United States and/or other countries worldwide.</p>
+      <p>Copyright &copy; Robert White 2018 OpenGL&reg; and the oval logo are trademarks or registered trademarks of Hewlett Packard Enterprise in the United States and/or other countries worldwide.<br/>All images / content made by Robert White with exception of logos in Glass Wall (click to go the sources)</p>
     </div>
   </body>
 </html>
