--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <!--Copyright notice-->
     <div id="footer">
-      <p>Copyright &copy; Robert White 2018</p>
+      <p>Copyright &copy; Robert White 2018<br/>All images / content made by Robert White with exception of logos in Glass Wall (click to go to source)</p>
     </div>
   </body>
 </html>
